--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Miracle Chukwuma <chukwuma258@gmail.com>
+Akoji Shaibu Akoji <Akoji1982@gmail.com>
